--- a/record_to_slack/templates/home.html
+++ b/record_to_slack/templates/home.html
@@ -1,4 +1,4 @@
 Looks like you don't have the Arcela bot installed on your team yet. Please:
-<a href="https://slack.com/oauth/authorize?scope=files:write:user,bot&client_id=200259025942.518861161521&redirect_uri=http%3A%2F%2Flocalhost%3A5000%2Fslack%2Fadd%2Fredirect%0A">
+<a href="https://slack.com/oauth/authorize?scope=files:write:user,bot&client_id=200259025942.518861161521&redirect_uri={{ redirect_uri|urlencode }}">
   <img alt="Add to Slack" height="40" width="139" src="https://platform.slack-edge.com/img/add_to_slack.png" srcset="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x" />
 </a>
