Improve template structure.

--- a/record_to_slack/templates/layout.html
+++ b/record_to_slack/templates/layout.html
@@ -2,9 +2,11 @@
 <html>
   <head>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    {% block style %}{% endblock%}
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <title>Record to Slack</title>
   </head>
   <body>
-    <div id="content">{% block content %}{% endblock %}</div>
+    <div id="main">{% block content %}{% endblock %}</div>
   </body>
 </html>
