--- a/record_to_slack/templates/layout.html
+++ b/record_to_slack/templates/layout.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     {% block style %}{% endblock%}
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <title>Record to Slack</title>
   </head>
   <body>
