Add logout button and welcome message.

--- a/record_to_slack/static/templates/login.css
+++ b/record_to_slack/static/templates/login.css
@@ -6,3 +6,14 @@
   background: rgb(35,32,95);
   background: radial-gradient(circle, rgba(35,32,95,1) 0%, rgba(63,14,64,1) 100%, rgba(9,122,145,1) 100%);
 }
+
+.container {
+  margin: 10px;
+  text-align: center;
+}
+
+.container div {
+  font-family: sans-serif;
+  color: lightblue;
+  line-height: 30px;
+}
