--- a/record_to_slack/templates/record.html
+++ b/record_to_slack/templates/record.html
@@ -12,6 +12,9 @@
       Send
     </div>
   </div>
+  <div class="footer">
+    <a href="{{ url_for('logout') }}">Logout</a>
+  </div>
 </div>
 
 <script>
