--- a/record_to_slack/static/templates/record.css
+++ b/record_to_slack/static/templates/record.css
@@ -21,9 +21,10 @@
 }
 
 .actions button, .actions #submitButton {
-	width: 35px;
-	height: 35px;
-	margin: 18px;
+  width: 35px;
+  height: 35px;
+  margin: 18px;
+  cursor: pointer;
 }
 
 .actions #recordButton {
@@ -58,6 +59,10 @@
   color: rgba(63,14,64,1);
   margin-left: 30px;
   border-radius: 5px;
+}
+
+.footer a {
+  text-decoration: none;
 }
 
 @keyframes pulse{
