--- a/record_to_slack/templates/record.html
+++ b/record_to_slack/templates/record.html
@@ -14,8 +14,8 @@
   </div>
   <audio id="recording" controls></audio>
   <div class="actions">
-    <button id="recordButton"></button>
-    <button id="stopButton" class="stop" disabled></button>
+    <button id="recordButton">REC</button>
+    <button id="stopButton" class="stop" disabled>Stop</button>
     <div id="submitButton">
       Send
     </div>
