--- a/record_to_slack/static/templates/record.css
+++ b/record_to_slack/static/templates/record.css
@@ -4,69 +4,82 @@
   align-items: center;
   justify-content: center;
   background: rgba(63,14,64,1);
-  font-size: 20px;
   color: rgba(63,14,64,1);
 }
 
 .container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 15px;
-  background-color: rgb(224, 199, 225);
+  display: grid;
+  grid-template-areas:
+    "channel channel actions"
+    "preview preview actions"
+    "footer  send    actions";
+  gap: 10px;
+  background-color: #ffffffcc;
   border-radius: 5px;
+  padding: 10px;
 }
 
 .channel {
-  margin-bottom: 5px;
-}
-
-.channel select {
-  font-size: inherit;
+  grid-area: channel;
 }
 
 .actions {
+  grid-area: actions;
   display: flex;
-  margin: 10px;
+  flex-direction: column;
+  justify-content: space-evenly;
 }
 
-.actions button, .actions #submitButton {
-  width: 35px;
-  height: 35px;
-  margin: 15px;
-  padding: 0;
+.actions button {
   border: 0;
-  color: white;
-  background-color: black;
-  font-size: 12px;
-  cursor: pointer;
 }
 
-.actions #recordButton {
+#record-button {
+  width: 40px;
+  height: 40px;
   background-color: darkred;
   border-radius: 50%;
+  color: white;
   outline: none;
 }
 
-.actions #recordButton.recording {
+#record-button.recording {
   background-color: red;
-  animation: 1.5s infinite linear pulse;
+  animation: 1s infinite alternate pulse;
 }
 
-.actions #stopButton:disabled {
-  opacity: .7;
-}
-
-.actions #submitButton {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 70px;
-  color: rgba(63,14,64,1);
-  background-color: white;
-  margin-left: 30px;
+#stop-button {
+  height: 40px;
   border-radius: 5px;
-  font-size: initial;
+  background-color: #4e4e4e;
+  color: #f1f1f1;
+}
+
+#stop-button:disabled {
+  background-color: darkgray;
+}
+
+.record {
+  grid-area: preview;
+  display: flex;
+  flex-direction: column;
+}
+
+.record #recording {
+  width: 250px;
+  margin-bottom: 5px;
+}
+
+.record #submit-button {
+  height: 20px;
+  border: 0;
+  border-radius: 5px;
+  background-color: rgba(63,14,64,1);
+  color: #f1f1f1;
+}
+
+.footer {
+  grid-area: footer;
 }
 
 .footer a {
@@ -74,14 +87,10 @@
 }
 
 @keyframes pulse{
-  0%{
-    box-shadow: 0px 0px 5px 0px rgba(173,0,0,.3);
+  from {
+    background-color: darkred;
   }
-  65%{
-    box-shadow: 0px 0px 5px 13px rgba(173,0,0,.3);
-  }
-  90%{
-    box-shadow: 0px 0px 5px 13px rgba(173,0,0,0);
+  to {
+    background-color: rgb(230,0,0);
   }
 }
-</style>
