--- a/record_to_slack/templates/login.html
+++ b/record_to_slack/templates/login.html
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block content %}
 <div class="container">
-  <a href="https://slack.com/oauth/authorize?scope=identity.basic&client_id=200259025942.518861161521&redirect_uri={{ redirect_uri|urlencode }}">
+  <a href="https://slack.com/oauth/authorize?scope=files:write:user,channels:read,groups:read&client_id=200259025942.518861161521&redirect_uri={{ redirect_uri|urlencode }}">
     <img src="https://api.slack.com/img/sign_in_with_slack.png" />
   </a>
   <div>
