--- a/record_to_slack/templates/layout.html
+++ b/record_to_slack/templates/layout.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/layout.css') }}">
     {% block style %}{% endblock%}
     <title>Record to Slack</title>
   </head>
