--- a/record_to_slack/templates/login.html
+++ b/record_to_slack/templates/login.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block style %}
-<link rel="stylesheet" href="{{ url_for('static', filename='templates/login.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/login.css') }}">
 {% endblock %}
 {% block content %}
 <div class="container">
